# Corgi3DS

./: .gitignore  CMakeLists.txt  Corgi3DS.pro  Makefile.switch  README.md  aes.cpp  aes.hpp  arm.cpp  arm.hpp  arm_disasm.cpp  arm_disasm.hpp  arm_interpret.cpp  arm_interpret.hpp  bswp.hpp  cp15.cpp  cp15.hpp  dma9.cpp  dma9.hpp  emmc.cpp  emmc.hpp  emulator.cpp  emulator.hpp  emuwindow.cpp  emuwindow.hpp  gpu.cpp  gpu.hpp  interrupt9.cpp  main.cpp  mpcore_pmr.cpp  mpcore_pmr.hpp  pxi.cpp  pxi.hpp  rotr.cpp  rotr.hpp  rsa.cpp  rsa.hpp  sha.cpp  sha.hpp  thumb_disasm.cpp  thumb_interpret.cpp  (+2 more)
.github/workflows/: main.yml  windows_build.sh
src/core/: corelink_dma.cpp  corelink_dma.hpp  emulator.cpp  emulator.hpp  i2c.cpp  i2c.hpp  p9_hle.cpp  p9_hle.hpp  pxi.cpp  pxi.hpp  scheduler.cpp  scheduler.hpp  sha_engine.cpp  sha_engine.hpp  spi.cpp  spi.hpp  timers.cpp  timers.hpp
src/core/arm11/: dsp.cpp  dsp.hpp  dsp_interpreter.cpp  dsp_interpreter.hpp  dsp_reg.hpp  dsp_signextend.hpp  gpu.cpp  gpu.hpp  gpu_floats.hpp  hash.cpp  hash.hpp  mpcore_pmr.cpp  mpcore_pmr.hpp  signextend.hpp  vector_math.hpp  wifi.cpp  wifi.hpp  wifi_timers.cpp  wifi_timers.hpp  xtensa.cpp  xtensa.hpp  xtensa_interpreter.cpp  xtensa_interpreter.hpp
src/core/arm9/: aes.cpp  aes.hpp  aes9.cpp  aes9.hpp  aes_lib.c  aes_lib.hpp  cartridge.cpp  cartridge.hpp  dma9.cpp  dma9.hpp  emmc.cpp  emmc.hpp  interrupt9.cpp  interrupt9.hpp  rsa.cpp  rsa.hpp  rsa9.cpp  rsa9.hpp  sha.cpp  sha.hpp  sha9.cpp  sha9.hpp
src/core/common/: bswp.cpp  bswp.hpp  common.hpp  exceptions.cpp  exceptions.hpp
src/core/cpu/: arm.cpp  arm.hpp  arm_disasm.cpp  arm_disasm.hpp  arm_interpret.cpp  arm_interpret.hpp  cp15.cpp  cp15.hpp  mmu.cpp  mmu.hpp  thumb_disasm.cpp  thumb_interpret.cpp  vfp.cpp  vfp.hpp  vfp_disasm.cpp  vfp_interpreter.cpp
src/polarssl/: bignum.c  bn_mul.h  rsa.c  rsa.h  sha2.c
src/qt/: emuthread.cpp  emuthread.hpp  emuwindow.cpp  emuwindow.hpp  main.cpp  settings.cpp  settings.hpp  settingswindow.cpp  settingswindow.hpp
src/switch/: main.cpp
src/tests/: armwrestler.elf  main.cpp  tests.pro  thumbwrestler.elf
